# kinect-to-hololens

./: README.md  build-plugin.ps1
cpp/: CMakeLists.txt  run-cmake.ps1
cpp/examples/: CMakeLists.txt  kinect_reader_demo.cpp  kinect_receiver_demo.cpp  kinect_sender_demo.cpp
cpp/examples/helper/: opencv_helper.h
cpp/plugin/: CMakeLists.txt  channel_texture.cpp  channel_texture.h  depth_texture.cpp  depth_texture.h  kh_plugin.cpp  plugin.cpp  plugin.def  texture_group.cpp  texture_group.h
cpp/src/: CMakeLists.txt  decoder.cpp  decoder.h  encoder.cpp  encoder.h  frames.cpp  frames.h  kh_core.cpp  kh_core.h  kh_message.cpp  kh_message.h  kh_receiver.cpp  kh_receiver.h  kh_rvl.cpp  kh_rvl.h  kh_sender.cpp  kh_sender.h  kh_vp8.h  kh_vp8_decoder.cpp  kh_vp8_encoder.cpp  receiver.cpp  receiver.h  rvl.cpp  rvl.h  sender.h  vp8.h  vp8_decoder.cpp  vp8_encoder.cpp
cpp/src/kinect/: CMakeLists.txt  kinect.cpp  kinect.h
cpp/src/kinect/raii/: kinect_body.cpp  kinect_body_frame.cpp  kinect_color_camera_settings.cpp  kinect_color_frame.cpp  kinect_depth_frame.cpp  kinect_multi_source_frame.cpp  kinect_multi_source_frame_reader.cpp  kinect_raii.h  kinect_sensor.cpp
unity/KinectToHololens/Assets/: DemoSceneManager.cs  WSATestCertificate.pfx
unity/KinectToHololens/Assets/HololensDemo/: HololensScreen.mat  HololensShader.shader
unity/KinectToHololens/Assets/ReceiverDemo/: ChannelShader.shader  ColorQuad.mat  ColorShader.shader  DepthQuad.mat  DepthShader.shader  UQuad.mat  VQuad.mat  YQuad.mat
unity/KinectToHololens/Assets/Scenes/: Demo.unity  HololensDemo.unity  ReceiverDemo.unity
unity/KinectToHololens/Assets/Scripts/: FFmpegFrame.cs  HololensDemoManager.cs  KinectColorIntrinsics.cs  KinectIrInstrinsics.cs  KinectScreen.cs  KinectToHololensPlugin.cs  MessageBuffer.cs  Plugin.cs  PluginHelper.cs  Receiver.cs  ReceiverDemoManager.cs  ScreenRenderer.cs  StatusText.cs  TcpSocket.cs  TextureGroup.cs  Vp8Decoder.cs
unity/KinectToHololens/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
